@@ -54,6 +54,7 @@
 		(cond
 			((null? x) y)
 			(#t (cons (car x) (append (cdr x) y))))))
+(define string-append (lambda (x y) (list->string (append (string->list x) (string->list y)))))
 
 ; Assoc
 (define assoc
@@ -62,22 +63,67 @@
 			((string=? (caar y) x) (car y))
 			(#t (assoc x (cdr y))))))
 
-; Reverse
-(define reving
-	(lambda (list result)
-		(cond
-			((null? list) result)
-			((list? list) (reving (cdr list) (cons (car list) result)))
-			(#t (cons list result)))))
-(define reverse (lambda (list) (reving list nil)))
+; Get-index
+(define get-index
+	(lambda (number list)
+		(if (null? list)
+			nil
+			(if (= 0 number)
+				(car list)
+				(get-index (- number 1) (cdr list))))))
 
-; Fold-right
+; Reverse
+(define reverse
+	(lambda (l)
+		(begin
+			(define reving
+				(lambda (list result)
+					(cond
+						((null? list) result)
+						((list? list) (reving (cdr list) (cons (car list) result)))
+						(#t (cons list result)))))
+			(reving l nil))))
+
+; Map
+(define map
+	(lambda (f l)
+		(if (null? l)
+			nil
+			(cons (f (car l)) (map f (cdr l))))))
+
+; Filter
+(define filter
+	(lambda (p l)
+		(if (null? l)
+			nil
+			(if (p (car l))
+				(cons (car l) (filter p (cdr l)))
+				(filter p (cdr l))))))
+
+; Folds
 (define fold-right
 	(lambda (f a l)
 		(if (null? l)
 			a
 			(f (car l) (fold-right f a (cdr l))))))
+(define fold-left
+	(lambda (f a xs)
+		(if (null? xs)
+			a
+			(fold-left f (f a (car xs)) (cdr xs)))))
 
 ; char functions
 (define numeric-char? (lambda (ch) (if (and (char? ch) (<= 48 ch 57)) #t nil)))
 (define digit->number (lambda (d) (if (and (char? d) (<= 48 d 57)) (- d 48) nil)))
+
+; length functions
+(define length (lambda (l) (if (null? l) 0 (+ 1 (length (cdr l))))))
+(define string-length (lambda (s) (length (string->list s))))
+
+; More generic comparision
+(define eq?
+	(lambda (a b)
+		(cond
+			((string? a) (if (string? b) (string=? a b) nil))
+			((char? a) (if (char? b) (= a b) nil))
+			(#t (= a b)))))
